--- a/citebot.ipynb
+++ b/citebot.ipynb
@@ -22,12 +22,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bibcodes = ['1994AAS...185.7506Z', '2001A&A...366...62A']\n",
-    "bibcodes = [\"2012IAUS..285..364M\", \"2010Sci...327..977B\", \"2012PASP..124..985S\", \"2015MNRAS.452.2269R\"]\n",
+    "#bibcodes = ['1994AAS...185.7506Z', '2001A&A...366...62A']\n",
+    "bibcodes = [\"2012IAUS..285..364M\", \"2010Sci...327..977B\", \"2012PASP..124..985S\", \"2015MNRAS.452.2269R\",\n",
+    "           \"2012MNRAS.419.3147A\", \"2008Sci...322.1345K\", \"2012Natur.481..167C\", \"2010ApJ...720.1073G\"]\n",
     "articles = [list(ads.SearchQuery(bibcode=bibcode))[0] for bibcode in bibcodes]"
    ]
   },
@@ -37,34 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "refs = list(ads.SearchQuery(q=\"references(bibcode:{0})\".format(bibcodes[1])))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "24\n",
-      "2001ApJ...549L..67L\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(len(refs))\n",
-    "print(refs[0].bibcode)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "refs = list(ads.SearchQuery(q=\"references(bibcode:{0})\".format(bibcodes[1])))\n",
     "cites = list(ads.SearchQuery(q=\"citations(bibcode:{0})\".format(bibcodes[1])))"
    ]
   },
