--- a/citebot.ipynb
+++ b/citebot.ipynb
@@ -2,63 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import ads"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "import ads\n",
+    "from tqdm import tqdm\n",
+    "from collections import Counter\n",
+    "import re\n",
+    "\n",
     "mytoken = np.genfromtxt(\"/Users/ruthangus/.ads/dev_key\", dtype=str)\n",
     "ads.config.token = str(mytoken)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#bibcodes = ['1994AAS...185.7506Z', '2001A&A...366...62A']\n",
-    "bibcodes = [\"2012IAUS..285..364M\", \"2010Sci...327..977B\", \"2012PASP..124..985S\", \"2015MNRAS.452.2269R\",\n",
-    "           \"2012MNRAS.419.3147A\", \"2008Sci...322.1345K\", \"2012Natur.481..167C\", \"2010ApJ...720.1073G\"]\n",
-    "articles = [list(ads.SearchQuery(bibcode=bibcode))[0] for bibcode in bibcodes]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "refs = list(ads.SearchQuery(q=\"references(bibcode:{0})\".format(bibcodes[1])))\n",
-    "cites = list(ads.SearchQuery(q=\"citations(bibcode:{0})\".format(bibcodes[1])))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "50\n",
-      "2018arXiv180503758L\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(len(cites))\n",
-    "print(cites[0].bibcode)"
    ]
   },
   {
@@ -70,46 +25,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_refs_and_cites_for_a_paper(bibcode):\n",
     "\n",
-    "    refs = list(ads.SearchQuery(q=\"references(bibcode:{0})\".format(bibcode)))\n",
+    "    refs = list(ads.SearchQuery(q=\"references(bibcode:{0})\".format(bibcode), sort=\"citation_count\"))\n",
     "    ref_bibcodes = [ref.bibcode for ref in refs]\n",
     "    \n",
-    "    cites = list(ads.SearchQuery(q=\"citations(bibcode:{0})\".format(bibcode)))\n",
+    "    cites = list(ads.SearchQuery(q=\"citations(bibcode:{0})\".format(bibcode), sort=\"citation_count\"))\n",
     "    cite_bibcodes = [cite.bibcode for cite in cites]\n",
     "\n",
-    "    return ref_bibcodes, cite_bibcodes\n",
-    "\n",
-    "ref_bibcodes, cite_bibcodes = get_refs_and_cites_for_a_paper(bibcodes[1])"
+    "    return ref_bibcodes, cite_bibcodes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_refs_and_cites_for_a_list_of_bibcodes(bibcode_list):\n",
     "    refs, cites = [], []\n",
-    "    for bibcode in bibcode_list:\n",
+    "    for bibcode in tqdm(bibcode_list):\n",
     "        ref_bibcodes, cite_bibcodes = get_refs_and_cites_for_a_paper(bibcode)\n",
-    "        refs.append(ref_bibcodes)\n",
-    "        cites.append(cite_bibcodes)\n",
-    "    all_refs, all_cites = [i for i in refs for j in i], [i for i in cites for j in i]\n",
-    "    return all_refs, all_cites"
+    "        refs += ref_bibcodes\n",
+    "        cites += cite_bibcodes\n",
+    "    return refs, cites"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 169/169 [03:31<00:00,  1.29s/it]\n"
+     ]
+    }
+   ],
    "source": [
+    "txt = open(\"../GProtation/documents/GProtation.bib\", \"r\").read()\n",
+    "bibcodes = re.findall(\"http://adsabs.harvard.edu/abs/(.+)}\", txt)\n",
+    "\n",
     "refs, cites = get_refs_and_cites_for_a_list_of_bibcodes(bibcodes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('2018MNRAS.474.2094A', 30),\n",
+       " ('2018ApJ...859..167E', 23),\n",
+       " ('2018arXiv180606642G', 19),\n",
+       " ('1984ApJ...279..763N', 15),\n",
+       " ('1995A&A...293...87K', 15),\n",
+       " ('2016arXiv160403979B', 14),\n",
+       " ('2011AJ....142..112B', 13),\n",
+       " ('2018ApJS..237...17S', 12),\n",
+       " ('2018AJ....155..203H', 12),\n",
+       " ('2017AJ....154..220F', 12)]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hist = Counter(refs)\n",
+    "hist.update(cites)\n",
+    "new_hist = Counter(dict((k, hist[k]) for k in set(hist.keys()) - set(bibcodes)))\n",
+    "new_hist.most_common(10)"
    ]
   },
   {
